--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>My second Github Repo</title>
 </head>
 <body>
-  
+  <h1>This is my second github system</h1>
+  <h2>This is my github second blog</h2>
+  <h3>This is my github 3rd blog</h3>
 </body>
 </html>
