--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>This is my second github system</h1>
   <h2>This is my github second blog</h2>
   <h3>This is my github 3rd blog</h3>
+  <img src="Boss2ss.png" alt="sony picture">
 </body>
 </html>
